# car-sim-fusion

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/car_description/share/ament_index/resource_index/parent_prefix_path/: car_description
install/car_description/share/car_description/: local_setup.sh  package.sh  package.xml
install/car_description/share/car_description/launch/: display.launch.py  gazebo.launch.py
install/car_description/share/car_description/urdf/: robot.urdf.xacro  robot_gazebo.xacro
src/car_controller/: CMakeLists.txt  package.xml
src/car_controller/car_controller/: simple_controller.py  twist_relay.py
src/car_controller/config/: car_controllers.yaml  twist_mux.yaml
src/car_controller/launch/: controller.launch.py
src/car_description/: CMakeLists.txt  package.xml
src/car_description/launch/: gazebo.launch.py
src/car_description/rviz/: display.rviz
src/car_description/urdf/: robot.urdf.xacro  robot_gazebo.xacro  robot_ros2_control.xacro
src/car_localization/: CMakeLists.txt  package.xml
src/car_localization/car_localization/: kalman_filter.py
src/car_localization/launch/: global_localization.launch.py
src/car_mapping/: CMakeLists.txt  package.xml
src/car_mllm/: memory.db  package.xml  setup.cfg  setup.py
src/car_mllm/car_mllm/: mllm.py  move.py  process.py
src/car_utils/: CMakeLists.txt  package.xml
src/car_utils/car_utils/: safety_stop.py
